# inventree-organizer-generator

./: pyproject.toml
examples/: akro_mils_10144.yaml  organizer_tray.yaml
src/: cli.py
